# causal_narrative_engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  FASE2_COMPLETE.md  FASE2_README.md  FASE2_STEPS.md  FASE2_SUMMARY.md  LICENSE  QUICKSTART_FASE2.md  README.md  ROADMAP.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/: AGENTS.md
.agents/skills/advance-story/: SKILL.md
.agents/skills/run-tests/: SKILL.md
.agents/skills/sdmm/: SKILL.md
adapters/: __init__.py  anthropic_adapter.py  logging_utils.py  mock_adapter.py  ollama_adapter.py
api/: __init__.py  config.py  dependencies.py  main.py
api/models/: __init__.py  requests.py  responses.py
api/routers/: __init__.py  health.py  narrative.py  worlds.py
api/services/: __init__.py  narrative_service_v2.py
cli/: play.py
cne_core/: __init__.py
cne_core/ai/: __init__.py  context_builder.py  response_schema.py  response_validator.py
cne_core/engine/: __init__.py  causal_validator.py  dramatic_engine.py  state_machine.py
cne_core/interfaces/: __init__.py  ai_adapter.py  repository.py
cne_core/models/: __init__.py  commit.py  event.py  world.py
docs/: DIAGRAMA_FLUJO.md  DIAGRAMA_FLUJO_es.md  api_guide.md  architecture_guide.md  docker_guide.md  flow_diagram.md  flowchart TD.mmd  guia_api.md  guia_api_es.md  guia_arquitectura_es.md  guia_docker_es.md  guia_persistencia.md  guia_python.md  guia_testing.md  integration_guide.md  integration_guide_es.md  persistence_guide.md  python_guide.md  testing_guide.md
docs/examples/: minimal_example.py
examples/: fase2_example.py
logs/: world_03c84d4e-4dc6-414c-9e5c-935df3984c74.jsonl
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_choices_table.py  003_add_causal_reason_to_events.py  004_entity_creations_table.py  005_add_output_language.py  006_translate_defaults_to_english.py  007_drop_dramatic_preview_column.py  __init__.py
persistence/: __init__.py  cache.py  database.py  state_rebuilder.py
persistence/models/: __init__.py  commit_orm.py  event_orm.py  world_orm.py
persistence/queries/: __init__.py  causal_queries.py
persistence/repositories/: __init__.py  postgresql_repository.py
scripts/: init_db.sql  init_postgres.sh  ollama-entrypoint.sh  pg_hba.conf  setup_env.py  verify_fase2.py
tests/: conftest.py  test_adapters.py  test_anthropic_adapter.py  test_api.py  test_fase1.py  test_fase2.py  test_fase3.py  test_mock_adapter.py  test_persistence_integration.py
web/: app.js  index.html  style.css
web/locales/: en.json  es.json
