[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cne-core"
version = "0.3.0"  # Fase 3
description = "Causal Narrative Engine — Motor narrativo independiente basado en causalidad formal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CNE Contributors"}
]
keywords = [
    "narrative",
    "storytelling",
    "ai",
    "causal-graph",
    "interactive-fiction",
    "branching-narrative"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment",
]

# ── Dependencias por fase ──────────────────────────────────────────────────────

dependencies = [
    # Core (sin dependencias externas en Fase 1)
]

[project.optional-dependencies]
# Fase 2: Persistencia
persistence = [
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",        # Driver async para PostgreSQL
    "psycopg2-binary>=2.9.0",  # Driver sync (para Alembic)
]

# Fase 3: IA
ai = [
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",  # Opcional
]

# Fase 4: API
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
]

# Desarrollo
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# Todas las dependencias (para desarrollo completo)
all = [
    "cne-core[persistence,ai,api,dev]"
]

[project.urls]
Homepage = "https://github.com/usuario/cne-core"
Documentation = "https://cne-core.readthedocs.io"
Repository = "https://github.com/usuario/cne-core"
Issues = "https://github.com/usuario/cne-core/issues"

# ── Configuración de herramientas ──────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["cne_core*", "persistence*", "adapters*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=cne_core",
    "--cov=persistence",
    "--cov=adapters",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "fase1: Tests de Fase 1 (Core Engine en memoria)",
    "fase2: Tests de Fase 2 (Persistencia con PostgreSQL)",
    "fase3: Tests de Fase 3 (AI Adapter)",
    "integration: Tests de integración (requieren servicios externos)",
    "anthropic_api: Tests que requieren API key de Anthropic (consumen tokens)",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | migrations/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (manejado por black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # function is too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Habilitar gradualmente
ignore_missing_imports = true
