[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cne-core"
version = "0.3.0"  # Phase 3
description = "Causal Narrative Engine — Independent narrative engine based on formal causality"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Marco Guerrero", email = "mvsquisix@gmail.com"}
]
keywords = [
    "narrative",
    "storytelling",
    "ai",
    "causal-graph",
    "interactive-fiction",
    "branching-narrative"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment",
]

# ── Dependencies by phase ─────────────────────────────────────────────────────

dependencies = [
    # Core (no external dependencies in Phase 1)
]

[project.optional-dependencies]
# Phase 2: Persistence
persistence = [
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",        # Async driver for PostgreSQL
    "psycopg2-binary>=2.9.0",  # Sync driver (for Alembic)
]

# Phase 3: AI
ai = [
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",  # Optional
]

# Phase 4: API
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
]

# Cache (Redis)
cache = [
    "redis[hiredis]>=5.0.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

# All dependencies (for full development)
all = [
    "cne-core[persistence,ai,api,cache,dev]"
]

[project.urls]
Homepage = "https://github.com/Squisix/causal_narrative_engine"
Documentation = "https://github.com/Squisix/causal_narrative_engine/blob/main/docs/integration_guide.md"
Repository = "https://github.com/Squisix/causal_narrative_engine"
Issues = "https://github.com/Squisix/causal_narrative_engine/issues"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["cne_core*", "persistence*", "adapters*", "api*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=cne_core",
    "--cov=persistence",
    "--cov=adapters",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "fase1: Phase 1 tests (Core Engine in memory)",
    "fase2: Phase 2 tests (Persistence with PostgreSQL)",
    "fase3: Phase 3 tests (AI Adapter)",
    "integration: Integration tests (require external services)",
    "anthropic_api: Tests that require Anthropic API key (consume tokens)",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | migrations/versions
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # function is too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Enable gradually
ignore_missing_imports = true
